feat: auth service

--- a/InventorySystem.Api/appsettings.json
+++ b/InventorySystem.Api/appsettings.json
@@ -3,9 +3,9 @@
     "DefaultConnection": "Server=127.0.0.1,1433;Database=InventoryDb;User Id=sa;Password=Edgar2510;Encrypt=False;MultipleActiveResultSets=true;"
   },
   "Jwt": {
-    "Key": "key12345!@",
+    "Key": "V9mL8#xPqW!zD6f@tRcKb4YuQ2$gHjNs",
     "Issuer": "InventorySystem",
-    "Audience": "InventorySystemUsers",
+    "Audience": "InventoryUsers",
     "DurationInMinutes": 120
   },
   "Logging": {
