--- a/InventorySystem.Infrastructure/InventorySystem.Infrastructure.csproj
+++ b/InventorySystem.Infrastructure/InventorySystem.Infrastructure.csproj
@@ -7,10 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\InventorySystem.Application\InventorySystem.Application.csproj" />
       <ProjectReference Include="..\InventorySystem.Domain\InventorySystem.Domain.csproj" />
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0">
